spacing fix for error-field

--- a/@navikt/core/css/form/form.css
+++ b/@navikt/core/css/form/form.css
@@ -23,3 +23,7 @@
   opacity: 0.3;
   cursor: not-allowed;
 }
+
+.navds-form-field__error--hidden {
+  display: none;
+}
